# rating_valuation

./: .dockerignore  .gitignore  CLAUDE.md  Capitolo_doc.md  Dockerfile  README.md  TODO.md  docker-compose.yml  overview.md  pyproject.toml  requirements.md
.claude/agents/: agentic-credit-risk-simulator.md  backtest-analyst.md  bms-analyst.md  data-curator.md  dcf-validator.md  rapd-simulator.md  valuation-reporter.md
app/: Rating_Valuation_Suite.py  _common.py  streamlit_app.py
app/pages/: 1_BMS_Builder.py  2_DCF_Valuation.py  3_Differential_Analysis.py  4_Agentic_Credit_Risk.py  4_RAPD_Credit_Risk.py  5_Rating_Mapper.py  6_Backtest_Comparator.py  (+1 more)
data/: companies.csv  macro.csv  mapping_iv_directive.md  rating_master_scale.csv  schema.md  sectors.csv
deploy/: deploy.sh  start.sh  stop.sh
docs/: Capitolo_agg.md  Capitolo_doc.md  nota_tecnica_credit_metrics_allineamento.md  wacc_credit_risk_linee_guida.md
examples/: 01_bms_industrial_machinery.py  02_full_pipeline_riva_meccanica.py
tests/: test_agentic_credit_risk_credit_metrics.py  test_agentic_credit_risk_debt_solver.py  test_agentic_credit_risk_simulator.py  test_agentic_credit_risk_stochastic.py  test_backtest_comparator.py  test_backtest_pd_distribution.py  test_bms_builder.py  test_common_data_loader.py  test_common_financial.py  test_common_invariants.py  test_dcf_coherence.py  test_dcf_three_stage.py  test_dcf_two_stage.py  test_differential_analyzer.py  test_rapd_credit_metrics.py  test_rapd_debt_solver.py  test_rapd_simulator.py  test_rapd_stochastic.py  test_rating_mapper.py  test_real_dataset.py
(+43 files in other folders)
